feat: добавить секцию elements

--- a/index.html
+++ b/index.html
@@ -21,11 +21,55 @@
       <section class="profile">
         <div class="profile__avatar"></div>
         <div class="profile__info">
-          <p class="profile__name">Жак-Ив Кусто</p>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <div class="profile__edit-button"></div>
           <p class="profile__status">Исследователь океана</p>
         </div>
         <div class="profile__add-button"></div>
+      </section>
+      <section class="elements">
+        <div class="element">
+          <img src="./images/photo-karachaevsk.jpg" alt="горный монастырь" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Карачаевск</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/photo-elbrus.jpg" alt="гора Эльбрус" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Эльбрус</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/photo-fuji.jpg" alt="вулкан Фудзияма" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Фудзияма</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/photo-london.jpg" alt="Лондон" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Лондон</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/photo-new-york.jpg" alt="Нью-Йорк" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Нью-Йорк</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/photo-dombay.jpg" alt="Домбай" class="element__image">
+          <div class="element__title">
+            <h3 class="element__text">Домбай</h3>
+            <div class="element__like"></div>
+          </div>
+        </div>
       </section>
     </main>
   </div>
