--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <p class="footer__item">&#169; 2020 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 </html>
