fix: выравнивание элементов, доработка html для валидации

--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
         <div class="element">
           <img src="./images/photo-karachaevsk.jpg" alt="горный монастырь" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Карачаевск</h3>
+            <p class="element__text">Карачаевск</p>
             <div class="element__like"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/photo-elbrus.jpg" alt="гора Эльбрус" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Эльбрус</h3>
+            <p class="element__text">Эльбрус</p>
             <div class="element__like"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/photo-sakhalin.jpg" alt="остров Сахалин" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Сахалин</h3>
+            <p class="element__text">Сахалин</p>
             <div class="element__like"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/photo-suzdal.jpg" alt="Суздаль" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Суздаль</h3>
+            <p class="element__text">Суздаль</p>
             <div class="element__like"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/photo-yeisk.jpg" alt="Ейск" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Ейск</h3>
+            <p class="element__text">Ейск</p>
             <div class="element__like"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/photo-dombay.jpg" alt="Домбай" class="element__image">
           <div class="element__title">
-            <h3 class="element__text">Домбай</h3>
+            <p class="element__text">Домбай</p>
             <div class="element__like"></div>
           </div>
         </div>
@@ -78,13 +78,13 @@
     <section class="popup">
       <form class="popup__container">
         <div class="popup__close"></div>
-        <h2 class="popup__title">Редактировать профиль</h2>
+        <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" class="popup__name">
         <input type="text" class="popup__status">
         <button type="submit" class="popup__save">Сохранить</button>
       </form>
     </section>
   </div>
+  <script src="scripts/index.js"></script>
 </body>
-<script type="text/javascript" src="scripts/index.js"></script>
 </html>
