--- a/index.html
+++ b/index.html
@@ -27,62 +27,38 @@
         <button type="button" aria-label="Добавить" class="profile__add-button"></button>
       </section>
       <section class="elements">
-        <div class="element">
-          <img src="./images/photo-karachaevsk.jpg" alt="горный монастырь" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Карачаевск</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img src="./images/photo-elbrus.jpg" alt="гора Эльбрус" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Эльбрус</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img src="./images/photo-sakhalin.jpg" alt="остров Сахалин" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Сахалин</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img src="./images/photo-suzdal.jpg" alt="Суздаль" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Суздаль</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img src="./images/photo-yeisk.jpg" alt="Ейск" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Ейск</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img src="./images/photo-dombay.jpg" alt="Домбай" class="element__image">
-          <div class="element__title">
-            <h3 class="element__text">Домбай</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-      </section>
+
     </main>
     <footer class="footer">
       <p class="footer__item">&#169; 2020 Mesto Russia</p>
     </footer>
-    <section class="popup">
+    <section class="popup popup_profile">
       <form name="profile-popup" method="POST" action="#" class="popup__container">
-        <button type="button" aria-label="Закрыть" class="popup__close"></button>
+        <button type="button" aria-label="Закрыть" class="popup__close popup__close_theme_profile"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" placeholder="Имя" name="popup__item" required class="popup__field popup__field_type_name">
         <input type="text" placeholder="Статус" name="popup__item" required class="popup__field popup__field_type_status">
         <button type="submit" class="popup__save">Сохранить</button>
       </form>
     </section>
+    <section class="popup popup_addcard">
+      <form name="profile-popup" method="POST" action="#" class="popup__container">
+        <button type="button" aria-label="Закрыть" class="popup__close"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <input type="text" placeholder="Название" name="popup__item" required class="popup__field popup__field_type_name">
+        <input type="text" placeholder="Ссылка на картинку" name="popup__item" required class="popup__field popup__field_type_status">
+        <button type="submit" class="popup__save">Создать</button>
+      </form>
+    </section>
+    <template class="elements-template">
+      <div class="element">
+        <img src="" alt="" class="element__image">
+        <div class="element__title">
+          <h3 class="element__text"></h3>
+          <button type="button" class="element__like"></button>
+        </div>
+      </div>
+    </template>
   </div>
   <script src="scripts/index.js"></script>
 </body>
