--- a/index.html
+++ b/index.html
@@ -32,24 +32,27 @@
     <footer class="footer">
       <p class="footer__item">&#169; 2020 Mesto Russia</p>
     </footer>
+
     <section class="popup popup_profile">
-      <form name="profile-popup" method="POST" action="#" class="popup__container">
-        <button type="button" aria-label="Закрыть" class="popup__close popup__close_theme_profile"></button>
+      <form name="profile-popup" method="POST" action="#" class="popup__container popup_container_type_edit">
+        <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_profile"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" placeholder="Имя" name="popup__item" required class="popup__field popup__field_type_name">
         <input type="text" placeholder="Статус" name="popup__item" required class="popup__field popup__field_type_status">
-        <button type="submit" class="popup__save">Сохранить</button>
+        <button type="submit" class="popup__save popup__save_type_edit">Сохранить</button>
       </form>
     </section>
+
     <section class="popup popup_addcard">
-      <form name="profile-popup" method="POST" action="#" class="popup__container">
-        <button type="button" aria-label="Закрыть" class="popup__close"></button>
+      <form name="edit-popup" method="POST" action="#" class="popup__container popup__container_type_add">
+        <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_cards"></button>
         <h3 class="popup__title">Новое место</h3>
-        <input type="text" placeholder="Название" name="popup__item" required class="popup__field popup__field_type_name">
-        <input type="text" placeholder="Ссылка на картинку" name="popup__item" required class="popup__field popup__field_type_status">
-        <button type="submit" class="popup__save">Создать</button>
+        <input type="text" placeholder="Название" name="popup__item" required class="popup__field popup__field_type_title">
+        <input type="text" placeholder="Ссылка на картинку" name="popup__item" required class="popup__field popup__field_type_link">
+        <button type="submit" class="popup__save popup__save_type_add">Создать</button>
       </form>
     </section>
+
     <template class="elements-template">
       <div class="element">
         <img src="" alt="" class="element__image">
