--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <template class="elements-template">
       <div class="element">
         <img src="" alt="" class="element__image">
+        <button type="button" class="element__delete"></button>
         <div class="element__title">
           <h3 class="element__text"></h3>
           <button type="button" class="element__like"></button>
