feature: добавить функционал лайков на страницу

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       </form>
     </section>
 
+    <section class="popup popup_image">
+      <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_image"></button>
+      <img src="" alt="" class="popup__image">
+      <h4 class="popup__titile"></h4>
+    </section>
+
     <template class="elements-template">
       <div class="element">
         <img src="" alt="" class="element__image">
