feature: открытие картинок попапом, плавное открытие попапов

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     </section>
 
     <section class="popup popup_image">
-      <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_image"></button>
-      <img src="" alt="" class="popup__image">
-      <h4 class="popup__titile"></h4>
+      <div class="popup__container popup__container_type_image">
+        <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_image"></button>
+        <img src="" alt="" class="popup__capture">
+        <h4 class="popup__titile popup__titile_type_image"></h4>
+      </div>
     </section>
 
     <template class="elements-template">
