--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       </div>
     </template>
   </div>
+  <script src="scripts/utils.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
