--- a/index.html
+++ b/index.html
@@ -34,21 +34,31 @@
     </footer>
 
     <section class="popup popup_profile">
-      <form name="profile-popup" method="POST" action="#" class="popup__container popup_container_type_edit">
+      <form name="profile-popup" novalidate method="POST" action="#" class="popup__container popup_container_type_edit">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_profile"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" placeholder="Имя" name="popup__item" required class="popup__field popup__field_type_name">
-        <input type="text" placeholder="Статус" name="popup__item" required class="popup__field popup__field_type_status">
+
+        <input id="name-input" type="text" placeholder="Имя" name="popup__item" minlength="2" maxlength="40" class="popup__field popup__field_type_name" required>
+        <span id="name-input-error" class="popup__field-error"></span>
+
+        <input id="status-input" type="text" placeholder="Статус" name="popup__item" minlength="2" maxlength="200" class="popup__field popup__field_type_status" required>
+        <span id="status-input-error" class="popup__field-error"></span>
+
         <button type="submit" class="popup__save popup__save_type_edit">Сохранить</button>
       </form>
     </section>
 
     <section class="popup popup_addcard">
-      <form name="edit-popup" method="POST" action="#" class="popup__container popup__container_type_add">
+      <form name="edit-popup" novalidate method="POST" action="#" class="popup__container popup__container_type_add">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_cards"></button>
         <h3 class="popup__title">Новое место</h3>
-        <input type="text" placeholder="Название" name="popup__item" required class="popup__field popup__field_type_title">
-        <input type="text" placeholder="Ссылка на картинку" name="popup__item" required class="popup__field popup__field_type_link">
+
+        <input id="title-input" type="text" placeholder="Название" name="popup__item" minlength="1" maxlength="30" class="popup__field popup__field_type_title" required>
+        <span id="title-input-error" class="popup__field-error"></span>
+
+        <input id="link-input" type="url" placeholder="Ссылка на картинку" name="popup__item" class="popup__field popup__field_type_link" required>
+        <span id="link-input-error" class="popup__field-error"></span>
+
         <button type="submit" class="popup__save popup__save_type_add">Создать</button>
       </form>
     </section>
@@ -72,7 +82,8 @@
       </div>
     </template>
   </div>
-  <script src="scripts/utils.js"></script>
-  <script src="scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
+  <script src="./scripts/utils.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
