feature: фиксы ошибок валидации

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </footer>
 
     <section class="popup popup_profile">
-      <form name="profile-popup" novalidate method="POST" action="#" class="popup__container popup_container_type_edit">
+      <form name="profile-popup" novalidate method="POST" action="#" class="popup__container popup__container_form popup_container_type_edit">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_profile"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
 
@@ -49,7 +49,7 @@
     </section>
 
     <section class="popup popup_addcard">
-      <form name="edit-popup" novalidate method="POST" action="#" class="popup__container popup__container_type_add">
+      <form name="edit-popup" novalidate method="POST" action="#" class="popup__container popup__container_form popup__container_type_add">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_cards"></button>
         <h3 class="popup__title">Новое место</h3>
 
