feature: закрытие попапов esc/overlay, валидация без объекта

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <input id="link-input" type="url" placeholder="Ссылка на картинку" name="popup__item" class="popup__field popup__field_type_link" required>
         <span id="link-input-error" class="popup__field-error"></span>
 
-        <button type="submit" class="popup__save popup__save_type_add">Создать</button>
+        <button type="submit" class="popup__save popup__save_type_add popup__save_inactive" disabled>Создать</button>
       </form>
     </section>
 
