--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
       </div>
     </template>
   </div>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/utils.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/card.js"></script>
+  <script type="module" src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/utils.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
