--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="третий проект Артем Князева в ЯП">
@@ -66,14 +65,14 @@
     <section class="popup popup_image">
       <div class="popup__container popup__container_type_image">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_image"></button>
-        <img src="" alt="" class="popup__capture">
+        <img src="#" alt="" class="popup__capture">
         <h4 class="popup__titile popup__titile_type_image"></h4>
       </div>
     </section>
 
     <template class="elements-template">
       <div class="element">
-        <img src="" alt="" class="element__image">
+        <img src="#" alt="" class="element__image">
         <button type="button" class="element__delete"></button>
         <div class="element__title">
           <h3 class="element__text"></h3>
@@ -82,7 +81,6 @@
       </div>
     </template>
   </div>
-  <script type="module" src="./scripts/utils.js"></script>
-  <script type="module" src="./scripts/index.js"></script>
+
 </body>
 </html>
