--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </div>
         <button type="button" aria-label="Добавить" class="profile__add-button"></button>
       </section>
-      <section class="elements">
+      <section class="elements"></section>
 
     </main>
     <footer class="footer">
