feature: добавление класса UserInfo, закрытие попапов по esc/overlay

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,10 @@
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_profile"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
 
-        <input id="name-input" type="text" placeholder="Имя" name="popup__item" minlength="2" maxlength="40" class="popup__field popup__field_type_name" required>
+        <input id="name-input" type="text" placeholder="Имя" name="name" minlength="2" maxlength="40" class="popup__field popup__field_type_name" required>
         <span id="name-input-error" class="popup__field-error"></span>
 
-        <input id="status-input" type="text" placeholder="Статус" name="popup__item" minlength="2" maxlength="200" class="popup__field popup__field_type_status" required>
+        <input id="status-input" type="text" placeholder="Статус" name="status" minlength="2" maxlength="200" class="popup__field popup__field_type_status" required>
         <span id="status-input-error" class="popup__field-error"></span>
 
         <button type="submit" class="popup__save popup__save_type_edit">Сохранить</button>
@@ -52,10 +52,10 @@
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_cards"></button>
         <h3 class="popup__title">Новое место</h3>
 
-        <input id="title-input" type="text" placeholder="Название" name="popup__item" minlength="1" maxlength="30" class="popup__field popup__field_type_title" required>
+        <input id="title-input" type="text" placeholder="Название" name="name" minlength="1" maxlength="30" class="popup__field popup__field_type_title" required>
         <span id="title-input-error" class="popup__field-error"></span>
 
-        <input id="link-input" type="url" placeholder="Ссылка на картинку" name="popup__item" class="popup__field popup__field_type_link" required>
+        <input id="link-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__field popup__field_type_link" required>
         <span id="link-input-error" class="popup__field-error"></span>
 
         <button type="submit" class="popup__save popup__save_type_add popup__save_inactive" disabled>Создать</button>
