feature: редактирование профиля, добавление карточек, счетчик лайков

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,10 @@
         <button type="button" class="element__delete"></button>
         <div class="element__title">
           <h3 class="element__text"></h3>
-          <button type="button" class="element__like"></button>
+          <div class="element__likes">
+            <button type="button" class="element__like"></button>
+            <div class="element__like-count"></div>
+          </div>
         </div>
       </div>
     </template>
