--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
     </header>
     <main class="content">
       <section class="profile">
-        <div class="profile__avatar"></div>
+        <button class="profile__avatar">
+          <img src="#" alt="#" class="profile__avatar-img" name="avatar"></img>
+        </button>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
           <button type="button" aria-label="Редактировать" class="profile__edit-button"></button>
@@ -71,7 +73,7 @@
     </section>
 
     <section class="popup popup_delete">
-      <form name="delete-popup" novalidate method="POST" action="#" class="popup__container popup__container_form popup__container_type_delete">
+      <form name="delete-popup" novalidate action="#" class="popup__container popup__container_form popup__container_type_delete">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_delete"></button>
         <h3 class="popup__title">Вы уверены?</h3>
         <button type="submit" class="popup__save popup__save_type_delete">Да</button>
@@ -79,10 +81,10 @@
     </section>
 
     <section class="popup popup_avatar">
-      <form name="avatar-popup" novalidate method="POST" action="#" class="popup__container popup__container_form popup__container_type_delete">
+      <form name="avatar-popup" novalidate action="#" class="popup__container popup__container_form">
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_avatar"></button>
         <h3 class="popup__title">Обновить аватар</h3>
-        <input id="title-input" type="text" placeholder="Ссылка на изображение" name="avatar" minlength="1" maxlength="30" class="popup__field popup__field_type_avatar" required>
+        <input id="title-input" type="text" placeholder="Ссылка на изображение" name="avatar" minlength="1" class="popup__field popup__field_type_avatar" required>
         <button type="submit" class="popup__save popup__save_type_avatar">Сохранить</button>
       </form>
     </section>
